# centralized-logging-with-opensearch

./: AGENTS.md  CHANGELOG.md  CUSTOM_BUILD.md  NOTICE.txt  README.md
deployment/: build-s3-dist.sh  run-unit-tests.sh
deployment/cdk-solution-helper/: index.js
deployment/ecr/clo-logging-syslog/: Dockerfile
deployment/ecr/clo-s3-list-objects/: Dockerfile  pyproject.toml
source/: run-all-tests.sh
source/constructs/: eslint.config.mjs  package-lock.json  package.json
source/constructs/lambda/api/alarm/: pyproject.toml
source/constructs/lambda/api/app_log_ingestion/: pyproject.toml
source/constructs/lambda/api/app_log_ingestion/flb/: kubectl_version.json
source/constructs/lambda/api/app_pipeline/: pyproject.toml
source/constructs/lambda/api/app_pipeline/test/: test_utils.py
source/constructs/lambda/api/cluster/: lambda_function.py  pyproject.toml
source/constructs/lambda/api/cluster/test/: test_lambda_function.py
source/constructs/lambda/api/cross_account/: pyproject.toml
source/constructs/lambda/api/cwl/: pyproject.toml
source/constructs/lambda/api/cwl/util/: cwl_metric_data_helper.py
source/constructs/lambda/api/grafana/: lambda_function.py  pyproject.toml
source/constructs/lambda/api/log_agent_status/: lambda_function.py  pyproject.toml
source/constructs/lambda/api/log_conf/: pyproject.toml
source/constructs/lambda/api/log_source/: pyproject.toml
source/constructs/lambda/api/log_source/util/: log_source.py
source/constructs/lambda/api/pipeline/: lambda_function.py  pyproject.toml
source/constructs/lambda/api/pipeline_ingestion_flow/: osi_log_processor_helper.py  osi_processor_flow.py  pyproject.toml
source/constructs/lambda/api/pipeline_ingestion_flow/test/: test_osi_processor_helper.py
source/constructs/lambda/api/resource/: pyproject.toml
source/constructs/lambda/common-lib/: pyproject.toml
source/constructs/lambda/common-lib/commonlib/: account.py  model.py  solution_metrics.py
source/constructs/lambda/common-lib/test/: test_account.py
source/constructs/lambda/custom-resource/: put_s3_bucket_notification_with_retry.py  pyproject.toml
source/constructs/lambda/main/cfnHelper/: pyproject.toml
source/constructs/lambda/main/sfnHelper/: pyproject.toml
source/constructs/lambda/metrics/: pyproject.toml
source/constructs/lambda/microbatch/: pyproject.toml
source/constructs/lambda/microbatch/connector/utils/: helpers.py
source/constructs/lambda/microbatch/metadata_writer/utils/aws/glue/: table.py
source/constructs/lambda/microbatch/test/: mock.py
source/constructs/lambda/pipeline/common/custom-resource/: pyproject.toml
source/constructs/lambda/pipeline/common/layer/: pyproject.toml
source/constructs/lambda/pipeline/log-processor/: pyproject.toml
source/constructs/lambda/pipeline/log-processor/event/: event_parser.py
source/constructs/lambda/pipeline/log-processor/idx/: opensearch_client.py
source/constructs/lambda/pipeline/log-processor/log_processor/: log_parser.py
source/constructs/lambda/pipeline/log-processor/test/: test_event_parser.py
source/constructs/lambda/plugin/standard/: pyproject.toml
source/constructs/lib/api/: app-log-ingestion-flow.ts  app-log-ingestion-stack.ts  app-pipeline-flow.ts  app-pipeline-stack.ts  app-table-stack.ts  appsync-stack.ts  cluster-stack.ts  common-resource-stack.ts  cross-account-stack.ts  cwl-stack.ts  fluent-bit-config-stack.ts  grafana-stack.ts  instance-stack.ts  lambda-construct.ts  log-conf-stack.ts  log-source-stack.ts  svc-pipeline-flow.ts  svc-pipeline-stack.ts
source/constructs/lib/kinesis/: kds-stack.ts
source/constructs/lib/kinesis/lambda/: index.py  pyproject.toml
source/constructs/lib/layer/: layer.ts
source/constructs/lib/layer/python/: pyproject.toml
source/constructs/lib/main/: auth-stack.ts  cfn-flow-stack.ts  cr-stack.ts  ecs-cluster-stack.ts
source/constructs/lib/microbatch/main/services/dynamodb/: init-dynamodb-stack.ts
source/constructs/lib/microbatch/main/services/lambda/: init-etl-helper.ts  init-lambda-layer.ts  init-metadata-writer.ts  init-pipeline-resources-builder-stack.ts  init-s3-object-migration-stack.ts  init-s3-object-scanning-stack.ts  init-ses-send-email.ts
source/constructs/lib/microbatch/main/services/lambda/layer/: pyproject.toml
source/constructs/lib/microbatch/pipeline/: init-pipeline-resource.ts
source/constructs/lib/pipeline/application/: s3-source-stack.ts
source/constructs/lib/pipeline/common/: opensearch-init-stack.ts
source/constructs/lib/pipeline/service/: cloudfront-realtime-log-stack.ts  cloudwatch-log-stack.ts  cw-to-firehose-to-s3-stack.ts  rds-logs-to-s3.ts  s3-to-opensearch-osi-stack.ts  s3-to-opensearch-stack.ts  waf-sampled-stack.ts
source/constructs/lib/solution-metrics/: solution-metrics-construct.ts
source/constructs/test/: app-pipeline.test.ts  main.test.ts  service-pipeline.test.ts
source/portal/: .eslintrc.json  package-lock.json  package.json
source/portal/src/: App.tsx  setupTests.ts
source/portal/src/assets/js/: request.ts
source/portal/src/components/: SignOut.tsx
source/portal/src/components/test/: SignOut.test.tsx
source/portal/src/help/test/: ConfigFilter.test.tsx
source/portal/src/router/: AmplifyAppRouter.tsx
source/portal/src/router/test/: AmplifyAppRouter.test.tsx
