[project]
name = "clo-s3-list-objects"
description = ""
requires-python = ">=3.10"
dependencies = [
    "boto3 (==1.39.14)",
    "setuptools (==78.1.1)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
boto3 = "1.39.14"
moto = "~4.2.13"
pytest = "^9.0.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
requests-aws4auth = "^1.3.1"
cryptography = ">=46.0.7"
requests = ">=2.33.0"
urllib3 = ">=2.7.0"
pygments = ">=2.20.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
