[project]
name = "clo-s3-list-objects"
version = "0.0.1"
description = ""
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "boto3 (==1.39.14)",
    "setuptools (>=83.0.0,<84)",
]

[dependency-groups]
dev = [
    "boto3==1.39.14",
    "moto~=4.2.13",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "requests-mock>=1.12.1,<2",
    "requests-aws4auth>=1.3.1,<2",
    "cryptography>=46.0.7",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
    "pygments>=2.20.0",
    "commonlib",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
commonlib = { path = "../../../source/constructs/lambda/common-lib", editable = true }

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
