[project]
name = "commonlib"
version = "0.1.0"
description = "Common Python library"
requires-python = ">=3.10,<4.0.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aws-lambda-powertools>=3.4.1,<4",
    "pydantic>=1.10.26,<2",
    "pip>=26.0.1,<27",
    "requests>=2.33.0,<3",
    "requests-aws4auth>=1.3.1,<2",
]

[build-system]
requires = ["setuptools>=83.0.0,<84"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "moto==4.2.13",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "requests-mock>=1.12.1,<2",
    "cryptography>=46.0.7",
    "pygments>=2.20.0",
]

[tool.uv]
default-groups = "all"
