[project]
name = "custom-resource"
description = "Custom resource lambda"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
moto = "~4.2.13"
pytest = "^9.0.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
cryptography = ">=46.0.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
