[project]
name = "metrics"
version = "0.0.1"
description = "Solution metrics helper lambda"
requires-python = ">=3.10,<4.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.1.1,<7",
    "urllib3>=2.5.0,<3",
    "commonlib",
    "boto3>=1.38.1,<2",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
commonlib = { path = "../common-lib" }

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
