[project]
name = "app-log-ingestion"
version = "0.0.1"
description = "app log ingestion lambda"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["jinja2 (>=3.1.5,<4.0.0)"]

[dependency-groups]
dev = [
    "boto3>=1.36.1,<2",
    "moto[awslambda]~=4.2.13",
    "docker>=7.1.0,<8",
    "pytest>=9.0.3,<10",
    "pyyaml>=6.0.2,<7",
    "jinja2>=3.1.6,<4",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "requests-mock>=1.12.1,<2",
    "requests-aws4auth>=1.3.1,<2",
    "urllib3>=2.5.0,<3",
    "pydantic>=1.10.26,<2",
    "cryptography>=46.0.7",
    "commonlib",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
commonlib = { path = "../../common-lib", editable = true }

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
