[project]
name = "app-pipeline"
version = "0.0.1"
description = "AppPipeline APIs Resolver lambda"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["pyyaml (>=6.0.2,<7.0.0)"]

[dependency-groups]
dev = [
    "boto3>=1.36.1,<2",
    "moto[awslambda]==4.2.13",
    "pytest>=9.0.3,<10",
    "pyyaml>=6.0.2,<7",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "requests-mock>=1.12.1,<2",
    "requests-aws4auth>=1.3.1,<2",
    "pyparsing>=3.2.1,<4",
    "responses>=0.25.6,<0.26",
    "pydantic==1.10.14",
    "cryptography>=46.0.7",
    "commonlib",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
commonlib = { path = "../../common-lib", editable = true }

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
