[project]
name = "log-conf"
description = "LogConf APIs Resolver lambda"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
boto3 = "^1.36.1"
moto = "4.2.13"
pytest = "^9.0.3"
pyyaml = "^6.0.2"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
requests-aws4auth = "^1.3.1"
pydantic = "1.10.14"
cryptography = ">=46.0.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
