[project]
name = "pipeline-ingestion-flow"
version = "0.0.1"
description = "pipeline ingestion flow lambda"
requires-python = ">=3.10,<4.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["jinja2 (>=3.1.5,<4.0.0)"]

[dependency-groups]
dev = [
    "moto~=4.2.13",
    "boto3>=1.36.1,<2",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0.0,<7",
    "docker>=7.1.0,<8",
    "openapi-spec-validator>=0.7.1,<0.8",
    "jsonschema==4.19.0",
    "jinja2>=3.1.6,<4",
    "pytest-mock>=3.14.0,<4",
    "requests-mock>=1.12.1,<2",
    "cryptography>=46.0.7",
    "commonlib",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
commonlib = { path = "../../common-lib", editable = true }

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
