[project]
name = "log-processor"
version = "0.0.1"
description = "Lambda function to process and load logs into OpenSearch"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[dependency-groups]
dev = [
    "urllib3>=2.5.0,<3",
    "requests>=2.33.0,<3",
    "requests-aws4auth>=1.3.1,<2",
    "boto3>=1.36.1,<2",
    "botocore>=1.36.1,<2",
    "moto~=5.1.3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "requests-mock>=1.12.1,<2",
    "docker>=7.1.0,<8",
    "cryptography>=46.0.7",
    "commonlib",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
commonlib = { path = "../../common-lib", editable = true }

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
