[project]
name = "standard"
version = "0.0.1"
description = ""
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "user-agents (>=2.2.0,<3.0.0)",
    "maxminddb (>=2.6.3,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0.0,<7",
    "user-agents>=2.2.0,<3",
    "maxminddb>=2.6.3,<3",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
