[project]
name = "kinesis-lambda"
version = "0.0.1"
description = "Kinesis lambda"
requires-python = ">=3.10,<4.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[dependency-groups]
dev = [
    "moto~=4.2.13",
    "docker>=7.1.0,<8",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0.0,<7",
    "jsonschema==4.19.0",
    "openapi-spec-validator>=0.7.1,<0.8",
    "cryptography>=46.0.7",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

