[project]
name = "python"
version = "0.0.1"
description = "Python layer"
requires-python = ">=3.10,<4.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic (==1.10.14)",
    "aws-lambda-powertools (>=3.4.1,<4.0.0)",
    "requests (>=2.33.0,<3.0.0)",
    "requests-aws4auth (>=1.3.1,<2.0.0)",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
